# meal-planner

./: .env.example  .gitignore  CI_SETUP.md  FEATURES.md  MVP_PLAN.md  Procfile  QUICK_WINS.md  README.md  SOFTWARE_ARCHITECTURE.md  TASKS.md  TECH_STACK.md  config.py  meal-planner-spec.md  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_recipe_uuid_pk.py  003_add_week_start_date.py
app/: ai_recipe_extractor.py  config.py  image_recipe_extractor.py  ingredient_normalizer.py  ingredient_parser.py  ingredient_substitutions.py  instagram_fetcher.py  instagram_parser.py  logging_config.py  main.py  nutrition_generator.py  planner.py  recipe_parser.py  recipes.py  sheets.py  shopping_list.py  shopping_normalizer.py  tag_inference.py
app/api/: import_routes.py  pages.py  planner.py  recipes.py  shopping.py
app/db/: crud.py  crud_sync.py  engine.py  models.py
app/static/: manifest.json  service-worker.js
app/templates/: error.html  index.html  index_old.html  recipe_detail.html
data/: recipes.json
scripts/: README.md  generate_seed_sql.py  import_spoonacular_daily.py  import_themealdb.py  migrate_nutrition.py  seed_recipes.sql  spoonacular_imported.json
tests/: conftest.py  test_api_recipes.py  test_cook_once.py  test_main.py  test_nutrition_generator.py  test_planner.py  test_recipe_parser.py  test_recipes.py  test_sheets.py  test_shopping_list.py  test_tag_inference.py
(+8 files in other folders)
